@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix suspicious (and duplicate) artifact change. Update documentation.
+ common/artifact.h
+ lib/artifacts
+Nicolas Weeger 2010-06-13
+
 CRE: display artifact values, as a dump for now.
 Nicolas Weeger 2010-06-13
 
